# AssetImporter

./: CMakeLists.txt
AssetImporter/: CMakeLists.txt  main.cpp
AssetImporter/AssetImporter/: AssetImporter.h
AssetImporter/AssetImporter/PictureImporter/: PictureImporter.cpp  PictureImporter.h
AssetImporter/Assets/: Asset.h
AssetImporter/Assets/Picture/: Picture.h
AssetImporter/Core/Allocator/: SystemAllocator.h
AssetImporter/Engine/AssetImporter/: AssetImporter.h
AssetImporter/Engine/AssetImporter/PictureImporter/: PictureImporter.cpp  PictureImporter.h
AssetImporter/Engine/Assets/: Asset.h  AssetPool.cpp  AssetPool.h  AssetUtils.cpp  AssetUtils.h
AssetImporter/Engine/Assets/Picture/: Picture.cpp  Picture.h
AssetImporter/Engine/Assets/Platform/Win64/: AssetUtils.cpp  AssetUtils.h
AssetImporter/Engine/Core/: APtr.h  Object.h  Types.h
AssetImporter/Engine/Managers/: Managers.cpp  Managers.h
AssetImporter/Engine/Managers/AssetManager/: AssetManager.cpp  AssetManager.h
AssetImporter/Engine/Managers/AssetManager/Platform/Win64/: AssetUtils.cpp
AssetImporter/Engine/Managers/ObjectManager/: ObjectManager.cpp  ObjectManager.h
AssetImporter/Engine/Managers/SystemManager/: SystemManager.cpp  SystemManager.h
AssetImporter/Engine/Modules/Log/: Log.cpp  Log.h
AssetImporter/Engine/Serialization/: BinaryFileSerialization.h  Serialization.h
AssetImporter/Engine/Systems/Allocator/: BaseAllocator.h  SystemAllocator.h
AssetImporter/Managers/: SystemsManager.cpp  SystemsManager.h
AssetImporter/Modules/Log/: Log.cpp  Log.h
AssetImporter/Serialization/: BinaryFileSerialization.h  Serialization.h
AssetImporter/Systems/Allocator/: BaseAllocator.h  SystemAllocator.h
AssetImporter/Systems/Log/: LogSystem.cpp  LogSystem.h
